# cmake_shell_c_learning

cmake_practice/calcdemo/: CMakeLists.txt
cmake_practice/calcdemo/include/: head.h
cmake_practice/calcdemo/src/: main.c
